public/css/style.css
body {
  padding-top: 10px;
}

.header {
  font-family:; "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 22px;
  font-weight: 500;
  color: #888;
  border-bottom: 6px #ddd solid;
}

.narrow {
  max-width: 700px;
  margin-right: auto;
  margin-left: auto;  
}

.footer {
  padding: 0;
  margin-top: 20px;
  text-align: center;
  color: #999;
  background-color: #f9f9f9;
  border-top: 1px #e5e5e5 solid;
}

.footer .nav {
  max-width: 700px;
  margin-right: auto;
  margin-left: auto;  
}

.footer .credits {
  padding: 20px;
  font-size: 12px;
}


.jumbotron .tagline {
  font-size: 23px;
}
.jumbotron p {
  font-size: 18px;
}


/**
 * Bootstrap callouts
 */

/* Base styles (regardless of theme) */
.bs-callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
}
.bs-callout h4 {
  margin-top: 0;
}
.bs-callout p:last-child {
  margin-bottom: 0;
}
.bs-callout code,
.bs-callout .highlight {
  background-color: #fff;
}
 
/* Themes for different contexts */
.bs-callout-danger {
  background-color: #fcf2f2;
  border-color: #dFb5b4;
}

.bs-callout-warning {
  background-color: #fefbed;
  border-color: #f1e7bc;
}

.bs-callout-info {
  background-color: #f0f7fd;
  border-color: #d0e3f0;
}

.bs-callout-success {
  background-color: #dff0d8;
  border-color: #b5dca5;
}

.bs-callout-danger h4 {
  color: #B94A48;
}

.bs-callout-warning h4 {
  color: #C09853;
}

.bs-callout-info h4 {
  color: #3A87AD;
}

.bs-callout-success h4 {
  color: #3c763d;
}


.bs-callout.pre {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
  word-break: break-all;
  word-wrap: break-word;
}




  /* new posts */

  #syndication-container ul {
    list-style-type: none;
    margin: 0;
    padding: 10px;
  }
  #syndication-container li {
    padding: 0;
    margin-bottom: 6px;
  }
  #syndication-container button {
    max-width: 240px;
    text-shadow: none;
  }
  #syndication-container button img {
    float: left;
    margin-left: 10px;
  }
  
  #last_response_date {
    font-size: 80%;
    font-weight: normal;
  }

  #btn_post {
    margin-bottom: 10px;
  }

  @media all and (max-width: 480px) {
    #note_location_img_wide {
      display: none;
    }
    #note_location_img_small {
      display: block;
    }
  }
  @media all and (min-width: 480px) {
    #note_location_img_wide {
      display: block;
    }
    #note_location_img_small {
      display: none;
    }
  }

  .img-visible {
    -webkit-border-bottom-right-radius: 0;
    -webkit-border-bottom-left-radius: 0;
    -moz-border-radius-bottomright: 0;
    -moz-border-radius-bottomleft: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }

  #note_location_img img {
    margin-top: -1px;
    border: 1px solid #ccc;
    -webkit-border-bottom-right-radius: 4px;
    -webkit-border-bottom-left-radius: 4px;
    -moz-border-radius-bottomright: 4px;
    -moz-border-radius-bottomleft: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
  }

  .callout {
    border-left: 4px #5bc0de solid;
    background-color: #f4f8fa;
    padding: 20px;
    margin-top: 10px;
  }
  .callout table {
    margin-bottom: 0;
  }


.entry-buttons {
  margin-bottom: 10px;
  list-style-type: none;
  padding-left: 0;
  max-width: 240px;
}
.entry-buttons li {
  margin-bottom: 6px;
}
.entry-buttons li input {
  width: 100%;
}



/**
 * Site Navigation Buttons
 */
.site-navigation {
  padding-bottom: 10px;
  font-size: 13px;
  text-align: center;
}
.site-navigation ul {
  list-style-type: none;
  margin: 0;
}
.site-navigation .prev {
  float: left;
}
.site-navigation .next {
  float: right;
}
.site-navigation::after {
  clear: both;
  display: table;
  content: "";
}
.site-navigation .disabled {
  color: #ccc;
}

.site-navigation a.up {
  height: 1.5em;
  font-size: 10px;
}
.site-navigation a.up abbr {
  padding-top: 1em;
  display: block;
  font-size: 14px;
}

/* Paging Buttons */
/* Thanks tantek.com for the design inspiration */
a.prev, a.next {
  font-size: 10px;
  width: 11.4em;
  height: 6.5em;
  padding: 0.2em 0 3em 0.1em;
  margin-right: .3em;
  text-align: center;
  background: #d9d9d9;
  border-radius: 1em;
  border: .1em solid #CCC;
  -webkit-border-radius: 1em;
  -moz-border-radius: 1em;
  line-height: 3em;
}
a.prev:hover, a.next:hover, 
a.prev.hover, a.next.hover {
  text-decoration: none;
  background: #c9c9c9;
  border-color: #AAA;
}
a.prev.disabled, a.next.disabled, 
a.prev.disabled.hover, a.next.disabled.hover,
a.prev.disabled:hover, a.next.disabled:hover {
  text-decoration: none;
  background: #f0f0f0;
  border-color: #d9d9d9;
  cursor: default;
}
a.prev.disabled abbr, a.next.disabled abbr, a.prev.disabled span, a.next.disabled span {
  cursor: default;
}
a.prev abbr, a.next abbr {
  display: block;
  border-bottom: 0;
  cursor: pointer;
  font-size: 4em;
  vertical-align: bottom;
}
a.prev span, a.next span {
  font-size: 1.8em;
  line-height: 1.2em;
}






/**
 entries
 */

ul.entries {
  list-style-type: none;
  padding-left: 0;
}
ul.entries li {
  position: relative;
  margin-left: 0;
  margin-bottom: 20px;
  -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
  -moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
  box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
}
ul.entries .map-img {
  position: absolute;
  right: 0;
}

ul.entries .author {
  background-color: #e3f0d0;
  border-bottom: 1px #d1e4b6 solid;
  display: block;
}

ul.entries .author {
  padding: 12px;
}
ul.entries .content {
  padding: 12px 12px 4px 12px;
}
ul.entries .date, ul.entries .location {
  padding-left: 12px;
}
ul.entries .date {
  padding-bottom: 12px;
}

ul.entries .author .photo {
  float: left;
}
ul.entries .author .photo img {
  border: 1px #91af67 solid;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  margin-right: 7px;
}
ul.entries .author .name {
  font-weight: bold;
}
ul.entries .author a {
  color: #67863c;
}
ul.entries .author .url {
  color: #777;
  display: block;
}

ul.entries .location {
  color: #999;
}

ul.entries .date a {
  color: #999;
}

ul.entries .content {
  font-size: 22px;
}

